Fixed issue with starting server modes without having to rely on the other (channel & server&